iMac added font and corrected content block spacing, but not perfect

--- a/app/sass/partials/_settings.scss
+++ b/app/sass/partials/_settings.scss
@@ -2,10 +2,16 @@
 // foundation.zurb.com
 // Licensed under MIT Open Source
 
-//
-$main_blue: #88C2C0;    // must be defined here, and not in styles.scss
-$faded_black: #212121;
-$faded_gray: #535353;
+// custom fonts:
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800");
+// font-family: 'Open Sans', sans-serif;
+// light, normal, semi-bold, bold, extra-bold
+
+// custom colors:
+$main_blue: #88C2C0;
+$faded_black: #262626;
+$faded_gray: #6D6D6D;
+$faded_white: #3F3F3F;
 
 // Table of Contents
 // Foundation Settings
@@ -84,7 +90,7 @@ $include-html-global-classes: $include-html-classes;
 
 $row-width: rem-calc(1000);
 // $total-columns: 12;
-// $column-gutter: rem-calc(30);
+$column-gutter: rem-calc(0);
 
 // c. Global
 // - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -93,6 +99,7 @@ $row-width: rem-calc(1000);
 // $font-family-sans-serif: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 // $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
 // $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
+$font-family-open-sans: 'Open Sans', sans-serif;
 
 // We use these to define default font weights
 // $font-weight-normal: normal !default;
