--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -67,16 +67,22 @@ section {
     border: 5px solid red;
     margin-top: 40px;
     margin-bottom: 40px;
+    background-color: $main_blue;
+    opacity: 0.9;
 
     #content_left {
-      background-color: $main_blue;
+      // background-color: $main_blue;
       border-radius: 5px 0px 0px 5px;
       padding-left: 15px;
+      font-family: 'Open Sans';
+      font-weight: 300;
 
       p {
         font-size: 26px;
-        padding: 30px;
-        // need light weight font
+        padding: 50px;
+        span {
+          font-weight: 700;
+        }
       }
     }
 
@@ -93,7 +99,7 @@ section {
         // height: 100px;
 
         padding-right: 300px;
-        padding-bottom: 200px;
+        padding-bottom: 300px;
         padding-top: 25px;
         // margin-left: 10px;
 
@@ -109,11 +115,14 @@ section {
         padding-top: 180px;
 
         #button {
-          background-color: gray;
+          background-color: $faded_gray;
           padding-top: 20px;
           padding-bottom: 20px;
           padding-right: 5px;
           padding-left: 5px;
+          margin-bottom: 38px;
+          width: 300px;
+          color: $faded_white;
         }
       }
     }
@@ -156,24 +165,39 @@ section {
       color: $white;
       // margin: 5px;
       border-radius: 5px;
+
         div{
+
           p {
             color: $white;
           }
           #more_deals {
+            text-align: center;
+            border: 1px solid $black;
+
             a {
+
+              span {
+                background-image: url('/images/arrow.png');
+            // padding-bottom: 50px;
+
+              }
               
             }
           }
         }
     }
-
   }
-
 }
 
-#footer_block {
-  background-color: $faded_black;
-  color: white;
+footer {
+  margin-top: 40px;
   text-align: center;
+
+  #footer_block {
+    background-color: $faded_black;
+    color: $faded_white;
+    padding-top: 20px;
+    padding-bottom: 8px;
+  }
 }
